# concordia

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  cabal.project  concordia.cabal
scripts/: install
src/: Cards.hs  Constants.hs  Forum.hs  HelperActions.hs  KOI.hs  Log.hs  Main.hs  Maps.hs  Play.hs  Question.hs  Score.hs  Setup.hs  State.hs  Static.hs  Types.hs  Version.hs  View.hs
src/Maps/: Builder.hs  Italia.hs
ui/: board.js  card.js  city.js  combinators.js  connect.js  forum.js  gui.js  index.html  list.js  log.js  main.js  market.js  path.js  player.js  question.js  region.js  resource.js  score.js  style.css  tagged.js  template.js  tooltip.js  undo.js
ui/editor/: Hellas.json  Imperium.json  Italia.json  editor.html
ui/maps/: Crete.json  Cyprus.json  Hellas.json  Hispania.json  Imperium.json  Ionium.json  Italia.json
