cabal-version:      3.0
name:               concordia
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-x-partial

executable concordia
    import:           warnings
    main-is:          Main.hs
    other-modules:
      KOI, Types, State, Setup, Static, Score, Play, Question, Cards,
      Constants, HelperActions, View
    default-extensions:
      TemplateHaskell,
      ImportQualifiedPost,
      OverloadedStrings,
      TypeFamilies,
      DeriveGeneric,
      DerivingVia,
      DerivingStrategies,
      DeriveAnyClass,
      BlockArguments,
      LambdaCase

    build-depends:    base, containers, text, aeson,
                      optics, KOI-interact, KOI-utils
    hs-source-dirs:   src
    default-language: Haskell2010
